# ArmAgeddon

./: .setup_assistant  Anotacoes.md  CMakeLists.txt  Commands.md  README.md
ArmAgeddonMoveit/: .setup_assistant  CMakeLists.txt  package.xml
ArmAgeddonMoveit/config/: ArmAgeddon.srdf  fake_controllers.yaml  ompl_planning.yaml  panda.srdf
ArmAgeddonMoveit/launch/: ArmAgeddon_moveit_controller_manager.launch.xml  PeVeInterface.rviz  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  panda_moveit_controller_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ArmAgeddonRobot/: CMakeLists.txt  package.xml
ArmAgeddonRobot/arquivos/: positions.txt  test.txt  test2.txt
ArmAgeddonRobot/launch/: CartesianPath.launch  CartesianReader.launch  GoHome.launch  GoRandom.launch  Reader.launch  TypeMoves.launch
ArmAgeddonRobot/src/: CartesianPath.cpp  CartesianReader.cpp  DOF5_custom1.cpp  DOF5_custom2.cpp  DOF5_random.cpp  GoHome.cpp  GoRandom.cpp  Reader.cpp  cartesian_path.cpp  listener.cpp  listener2.cpp  move_group_interface_tutorial.cpp  test.txt  test_custom1.cpp  test_custom2.cpp
ArmAgeddonRobot/urdf/: base.stl  config.json  cubo.stl  flange.stl  hand.xacro  link1.stl  link5.stl  panda_arm.urdf.xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro  robot.urdf  welding_torch.stl
ArmAgeddonRobot/urdf/collision/: base.scad  base.stl  flange.scad  flange.stl  link1.scad  link1.stl  link2.scad  link3.stl  link4.scad  link5.scad  link5.stl
armageddon_joint_states/: CMakeLists.txt  package.xml
armageddon_joint_states/launch/: joint_states_node.launch
armageddon_joint_states/src/: joint_interface_node.cpp  joint_states_node.cpp
armageddon_moveit/: .setup_assistant  CMakeLists.txt  package.xml
armageddon_moveit/config/: ArmAgeddon.srdf  joint_limits.yaml  ros_controllers.yaml
armageddon_moveit/launch/: ArmAgeddon_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
armageddon_robot/: CMakeLists.txt  package.xml
armageddon_robot/arquivos/: CartesianPath.xlsx  positions.md  positions.txt
armageddon_robot/launch/: CartesianReader.launch  GoHome.launch  GoRandom.launch  StopMove.launch  TypeMoves.launch
armageddon_robot/src/: CartesianReader.cpp  GoHome.cpp  GoRandom.cpp  Reader.cpp  StopMove.cpp  TypeMoves.cpp  listener.cpp
armageddon_robot/urdf/: config.json  robot.urdf
armageddon_robot/urdf/collision/: base.scad  link2.stl  link3.scad  link4.stl  welding_torch.scad  welding_torch.stl
armageddon_robot/urdf/visual/: link3.stl  link4.stl
config/: panda.srdf  ros_controllers.yaml
documentos/: CartesianReaderParametros.md  joint_interface_node.md  scope_0.md
documentos/formulario/: CartesianReader.md
documentos/videos/: Feedback.mkv  GoHome.mkv  GoRandom.mkv  Joint_state.mkv  StopMove.mkv  TypeMoves.mkv
launch/: demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  planning_context.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml
src/: -home-peve-ws_moveit-src-moveit_tutorials-doc-move_group_python_interface-scripts-.txt
